# Olive_daoV1

./: .gitignore  .vite.config.js.swp  Anchor.toml  OLD.int_dao.js  README.md  idl.json  import '.polyfill';.txt  initialize_dao.js  main.js  mint.json  olive.json  olive_dao.*  package-lock.json  package.json  state.json  treasury.json  va1KVnCuh6imoSCK4NPWzyzMomceELtQimETfXEMJiP.json  vaDBUgwZdfgtZcckKMDuMWFMCvHSY965e7PfciKjUCc.json  vaDis9ifH6JwUNAvjiqUfiieT3NG6f9DcYAVfDvjjiX.json  vite.config.js
frontend/: index.html  index.js
olive-dao-frontend/: W1EVM 0x763aa196c9a0716ef5aed5abe4f.txt  index.html  indexREAL_V1.html  indexV1.html  oracle.html  package-lock.json  package.json
olive-dao-frontend/src/: IMPORTANT TOKEN SPL.txt  SCRIPT FOR HTML INCASE.txt  main.js  main.ts  main_A.ts  main_REAL_V1.ts  olive_dao.json  style.css
programs/olive_dao/: Cargo.toml
programs/olive_dao/src/: MODlib.rs  REAL_V1_lib.rs  constants.rs  errors.rs  lib - Copy.rs  lib.rs
programs/olive_dao/src/state/: global_state.rs
scripts/: buy_with_sol.ts  initialize.ts  update_price.ts
tests/: olive_dao.test.js  olive_dao.test.ts  olive_dao.testV1.js
