[package]
name = "olive_dao"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "olive_dao"

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token_2022"] }
# switchboard-solana = "0.30.4"
# switchboard-solana = "0.30.4" # Match your Anchor version

# Add this to ensure the CPI modules are generated
[features]
default = ["idl-build"]
no-entrypoint = []
no-idl = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
cpi = ["no-entrypoint"]
anchor-debug = []
no-log-ix-name = []

# ADD THIS SECTION AT THE BOTTOM
[patch.crates-io]
# solana-instruction = { git = "https://github.com/solana-labs/solana.git", rev = "v2.2.1" }
# solana-program = { git = "https://github.com/solana-labs/solana.git", rev = "v2.3.3" }
# solana-zk-sdk = { git = "https://github.com/solana-labs/solana.git", rev = "v2.2.0" }
